[project]
name = "thorny-core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "giphy-client==1.0.0",
    "httpx==0.28.1",
    "nexuscore-client",
    "py-cord==2.7.0rc1",
    "python-dateutil==2.9.0",
]

[tool.uv.workspace]
members = [
    "nexuscore-client",
]

[tool.uv.sources]
nexuscore-client = { workspace = true }
