[project]
name = "thorny"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "giphy-client>=1.0.0",
    "httpx>=0.28.1",
    "nexuscore-client",
    "py-cord>=2.8.0",
    "python-dateutil>=2.9.0",
]

[project.scripts]
generate-api = "scripts.generate_client:main"

[tool.uv.workspace]
members = [
    "nexuscore-client",
]

[tool.uv.sources]
nexuscore-client = { workspace = true }

[dependency-groups]
dev = [
    "openapi-python-client>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]